appId: com.bizsawa.mobile
---
- launchApp
- tapOn: "Analytics"
- tapOn: "Week"
- assertVisible: "Revenue"
